implimenting ajax and appending to page

--- a/index.html
+++ b/index.html
@@ -12,7 +12,45 @@
 	<div class="wrapper">
 
 		<main id="main" class="main">
-			
+
+			<nav>
+				<ul>
+					<li class="hd zone-border zone-border-medium zone-sport nav-title">
+						<a href="sport"><h2 class="zone-color">sport</h2></a>
+					</li>
+					<li class="hd zone-border zone-border-medium zone-news nav-title">
+						<a href="new"><h2 class="zone-color">news</h2></a>
+					</li>
+					<li class="hd zone-border zone-border-medium zone-culture nav-title">
+						<a href="cultures"><h2 class="zone-color">cultures</h2></a>
+					</li>
+				</ul>
+			</nav>
+
+			<section>
+				<article>
+					<ol id="football"></ol>
+				</article>
+				<article>
+					<ol id="news"></ol>
+				</article>
+				<article>
+					<ol id="culture"></ol>
+				</article>
+			</section>
+
+			<noscript>
+				<article>
+					<ol id="football"><li> <a href="http://www.theguardian.com/football/blog/2016/feb/16/chelsea-transition-paris-saint-germain-guus-hiddink-champions-league">Spiky but in transition – Chelsea put on a Viking funeral for the old guard | Barney Ronay</a> </li><li> <a href="http://www.theguardian.com/football/2016/feb/16/manchester-united-repairs-bill-after-300-seats-damaged-fans-derby">Manchester United face repairs bill after ‘300 seats damaged by fans’ at Derby</a> </li><li> <a href="http://www.theguardian.com/football/live/2016/feb/16/paris-saint-germain-v-chelsea-champions-league-live">Paris Saint-Germain 2-1 Chelsea: Champions League – as it happened</a> </li><li> <a href="http://www.theguardian.com/football/2016/feb/17/he-must-score-an-away-goal-tonight-he-must">He MUST score an away goal tonight. He MUST | The Fiver</a> </li><li> <a href="http://www.theguardian.com/football/2016/feb/18/with-rayo-okc-la-liga-club-throws-hat-in-american-soccer-ring">With Rayo OKC, La Liga club throws hat in American soccer ring</a> </li><li> <a href="http://www.theguardian.com/football/2016/feb/21/west-bromwich-albion-tony-pulis-throw-coin-game-gone-mad-fa-cup-reading">West Brom’s Tony Pulis: to throw coin at player of club they support – the game’s gone mad</a> </li><li> <a href="http://www.theguardian.com/football/2016/feb/21/watford-wembley-quique-sanchez-flores-leeds-fa-cup">Watford Wembley memories stir Quique Sánchez Flores’s FA Cup dreams</a> </li><li> <a href="http://www.theguardian.com/football/2016/feb/21/tottenham-hotspur-crystal-palace-fa-cup-match-report">Crystal Palace and Martin Kelly ride luck to sink Tottenham Hotspur</a> </li><li> <a href="http://www.theguardian.com/football/blog/2016/feb/21/millwall-peterborough-the-den-league-one">Millwall defeat Peterborough but face a battle to defend their Den | Jeremy Alexander</a> </li><li> <a href="http://www.theguardian.com/football/2016/feb/18/david-de-gea-manchester-united-injury-crisis-warm-up">David de Gea adds to Manchester United injury crisis by getting hurt in warm-up</a> </li></ol>
+				</article>
+				<article>
+					<ol id="news"><li> <a href="http://www.theguardian.com/news/2016/feb/21/corrections-and-clarifications">Corrections and clarifications</a> </li><li> <a href="http://www.theguardian.com/news/2016/feb/18/corrections-and-clarifications">Corrections and clarifications</a> </li><li> <a href="http://www.theguardian.com/news/datablog/2016/feb/15/bernie-sanders-jeremy-corbyn-new-coalitions-left">Bernie Sanders, Jeremy Corbyn and their new coalitions on the left</a> </li><li> <a href="http://www.theguardian.com/news/2016/feb/16/market-mistakes-syria-science-film-music">Inside the 19 February edition</a> </li><li> <a href="http://www.theguardian.com/news/2016/feb/08/corrections-and-clarifications">Corrections and clarifications</a> </li><li> <a href="http://www.theguardian.com/news/2016/feb/07/observer-archive-week-1971">From the Observer archive – this week in 1971</a> </li><li> <a href="http://www.theguardian.com/news/2016/feb/07/for-the-record">For the record</a> </li><li> <a href="http://www.theguardian.com/news/2016/feb/07/corrections-and-clarifications">Corrections and clarifications</a> </li><li> <a href="http://www.theguardian.com/news/datablog/2016/feb/04/do-uk-meps-get-key-positions-of-power-in-europe">Do UK MEPs get key positions of power in Europe?</a> </li><li> <a href="http://www.theguardian.com/news/2016/feb/04/expendables-boldly-go">Expendables that boldly go</a> </li></ol>
+				</article>
+				<article>
+					<ol id="culture"><li> <a href="http://www.theguardian.com/culture/2016/feb/15/barry-adamson-interview-magazine-nick-cave-bad-seeds-david-lynch">Barry Adamson: 'I've been called the outsider's outsider'</a> </li><li> <a href="http://www.theguardian.com/culture/ng-interactive/2016/feb/21/simone-lia-on-having-an-unusual-name">Simone Lia on having an unusual name</a> </li><li> <a href="http://www.theguardian.com/culture/2016/feb/19/this-weeks-new-talks">This week’s new talks</a> </li><li> <a href="http://www.theguardian.com/culture/2016/feb/12/this-weeks-new-talks">This week’s new talks</a> </li><li> <a href="http://www.theguardian.com/culture/2016/feb/07/britain-risks-becoming-cultural-desert-as-museums-vanish">From DH Lawrence’s home to industrial mills, is regional heritage in jeopardy?</a> </li><li> <a href="http://www.theguardian.com/culture/2016/feb/12/the-10-best-things-to-do-this-week">The 10 best things to do this week</a> </li><li> <a href="http://www.theguardian.com/culture/2016/feb/20/the-k-ohle-a-comedy-podcast-to-get-lost-in">The K Ohle: a comedy podcast to get lost in</a> </li><li> <a href="http://www.theguardian.com/culture/2016/jan/24/british-artists-new-avant-garde-ica-damien-hirst">Wanted: bright young things to form Britain’s new avant-garde</a> </li><li> <a href="http://www.theguardian.com/culture/2016/feb/05/this-weeks-new-talks">This week’s new talks</a> </li><li> <a href="http://www.theguardian.com/uk-news/2016/feb/04/royal-mail-secret-railway-reopen-next-year">Royal Mail 'secret' railway on track to reopen next year</a> </li></ol>
+				</article>
+			</noscript>
+
 		</main>
 
 	</div>
