--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<meta charset=utf-8 />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>The Guardian</title>
 
 	<link rel="stylesheet" href="http://pasteup.guim.co.uk/0.0.7/css/core.pasteup.min.css" type="text/css">
@@ -14,22 +15,22 @@
 		<main id="main" class="main">
 
 			<nav>
-				<ul id="nav-tab" class="nav">
-				   <li class="hd zone-border zone-border-medium zone-football active"><a href="#football">Football</a></li>
-				   <li class="hd zone-border zone-border-medium zone-news"><a href="#news">News</a></li>
-				   <li class="hd zone-border zone-border-medium zone-culture"><a href="#culture">Culture</a></li>
+				<ul id="nav-tab" class="nav unstyled">
+				   <li class="hd zone-border zone-border-medium zone-football active"><a href="#football" class="zone-color">Football</a></li>
+				   <li class="hd zone-border zone-border-medium zone-news"><a href="#news" class="zone-color">News</a></li>
+				   <li class="hd zone-border zone-border-medium zone-culture"><a href="#culture" class="zone-color">Culture</a></li>
 				 </ul>
 			</nav>
 
 			<section class="tab__content">
-				<article class="tab__content--item active" id="football">
-					<ol id="football"></ol>
+				<article class="tab__content--section active" id="football">
+
 				</article>
-				<article class="tab__content--item" id="news">
-					<ol id="news"></ol>
+				<article class="tab__content--section" id="news">
+
 				</article>
-				<article class="tab__content--item" id="culture">
-					<ol id="culture"></ol>
+				<article class="tab__content--section" id="culture">
+
 				</article>
 			</section>
 
