--- a/index.html
+++ b/index.html
@@ -36,7 +36,9 @@
 
 			<noscript>
 				<section class="tab__content">
-					<article class="tab__content--section                     active" id="football">
+
+					<article class="tab__content--section active" id="football">
+						<div class="hd zone-border zone-border-medium zone-football active"><h2  class="zone-color">Football</h2></div>
 						<ol>
 							<li class="tab__content--item">
 								<a href="http://www.theguardian.com/football/blog/2016/feb/16/chelsea-transition-paris-saint-germain-guus-hiddink-champions-league">Spiky but in transition – Chelsea put on a Viking funeral for the old guard | Barney Ronay</a>
@@ -80,7 +82,8 @@
 							</li>
 						</ol>
 					</article>
-					<article class="tab__content--section                  " id="news">
+					<article class="tab__content--section active" id="news">
+						<div class="hd zone-border zone-border-medium zone-news"><h2 class="zone-color">News</h2></div>
 						<ol>
 							<li class="tab__content--item">
 								<a href="http://www.theguardian.com/news/2016/feb/21/corrections-and-clarifications">Corrections and clarifications</a>
@@ -124,7 +127,8 @@
 							</li>
 						</ol>
 					</article>
-					<article class="tab__content--section        " id="culture">
+					<article class="tab__content--section active" id="culture">
+						<div class="hd zone-border zone-border-medium zone-culture"><h2 class="zone-color">Culture</h2></div>
 						<ol>
 							<li class="tab__content--item">
 								<a href="http://www.theguardian.com/culture/2016/feb/15/barry-adamson-interview-magazine-nick-cave-bad-seeds-david-lynch">Barry Adamson: 'I've been called the outsider's outsider'</a>
