updating readme and work on ie9 ajax request

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 	<div class="wrapper">
 
-		<main id="main" class="main">
+		<div id="main" class="main">
 
 			<nav>
 				<ul id="nav-tab" class="nav unstyled">
@@ -175,7 +175,7 @@
 				</section>
 			</noscript>
 
-		</main>
+		</div>
 
 	</div>
 	<script src="build/app.js" type="text/javascript"></script>
